test/feature/Syntax/Error_UnicodeEscapeSequenceInName.js
// Should not compile.
// SyntaxError: feature/Syntax/Error_UnicodeEscapeSequenceInName.js:4:5: Character code '48' is not a valid identifier start char

var \u0030ab = 42;  // 0ab
